# RustFileTransfer

./: Cargo.toml  README.txt
files/server/: test1.txt  test2.txt
src/: client.rs  main.rs  server.rs
