[package]
name = "RustFileTransfer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.10.1"
serde = "1.0.137"
serde_cbor = "0.11.2"
serde_derive = "1.0.14"